chore: remove example code
